# Excel-Ente

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
plugins/: __init__.py  apps.py  base.py  models.py  static
plugins/data_manager/: __init__.py  apps.py  models.py  urls.py  views.py
plugins/data_manager/static/data_manager/js/: modals.js
plugins/data_manager/templates/data_manager/: base.html  database.html  db_info.html  loader.html  preview.html
plugins/import_file/: apps.py
plugins/migrations/: 0001_initial.py
